# omnibot3_pkg

./: README.md
omnibot3_control/: CMakeLists.txt  package.xml
omnibot3_control/config/: controller.yaml
omnibot3_control/launch/: omnibot3_control.launch  omnibot3_gazebo.launch
omnibot3_description/: CMakeLists.txt  package.xml
omnibot3_description/launch/: display_omnibot3.launch
omnibot3_description/launch/config/: omnibot3_description.rviz
omnibot3_description/meshes/: body3wheels.STL  wheel.STL
omnibot3_description/robot/: omnibot3.urdf.xacro
omnibot3_description/urdf/: common.xacro
omnibot3_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro
omnibot3_description/urdf/sensors/: imu.urdf.xacro
omnibot3_description/urdf/sensors/imu/: imu.gazebo.xacro
omnibot3_description/urdf/wheel/: wheel.gazebo.xacro  wheel.transmission.xacro  wheel.urdf.xacro
omnibot3_driver/: CMakeLists.txt  package.xml
omnibot3_driver/src/: drive_test.cpp  gyro_test.cpp
omnibot3_gazebo/: CMakeLists.txt  package.xml
omnibot3_gazebo/launch/: omnibot3_with_empty_world.launch
