<?xml version="1.0"?>
<package format="2">
  <name>omnibot3_control</name>
  <version>1.0.0</version>
  <description>The omnibot3_control package</description>


  <maintainer email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/a217079/omnibot3_pkg</url>

  <author email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
