<?xml version="1.0"?>
<package format="2">
  <name>omnibot3_description</name>
  <version>1.0.0</version>
  <description>
  Omnibot3 robot model package for gazebo simulation
  </description>

  <maintainer email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/a217079/omnibot3_pkg</url>

  <author email="jane.doe@example.com">Tatsuya Horikoshi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
