<?xml version="1.0"?>
<package format="2">
  <name>omnibot3_driver</name>
  <version>1.0.0</version>
  <description>The omnibot3_driver package</description>

  <maintainer email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/a217079/omnibot3_pkg</url>

  <author email="a217079@ne.kogakuin.ac.jp">Tatsuya Horikoshi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
