<?xml version="1.0"?>
<package format="2">
  <name>omnibot3_gazebo</name>
  <version>1.0.0</version>
  <description>
  This package provides a launch file that starts simulation of omnibot3 on gazebo
  </description>

  <maintainer email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/a217079/omnibot3_pkg</url>
  
  <author email="a217079@ns.kogakuin.ac.jp">Tatsuya Horikoshi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>omnibot3_control</exec_depend>
  <exec_depend>omnibot3_description</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
